--- a/index.html
+++ b/index.html
@@ -9200,7 +9200,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200405105729171" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200405152009685" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9229,7 +9229,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200405100149036" title="$:/temp/search">
+<div created="20161023184814872" modified="20200405151858615" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9730,7 +9730,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Odelia]]&gt;&gt;
 </pre>
 </div>
-<div created="20161213185747995" modified="20200202162618124" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="אווה">
+<div created="20161213185747995" modified="20200405152156518" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[אחות כהן]] [[האחיות בלות]] [[כשהם ישנים]] אפייה" title="אווה">
 <pre>[img[pictures/eva-veyoyo.jpg]]
 
 ''או בשמה המלא, אווה כהן.''
@@ -16179,7 +16179,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200405102558367" modified="20200405110931304" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
+<div created="20200405102558367" modified="20200405122503259" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
 <pre>
 [img[pictures/makolet-haachim.jpg]]
 
@@ -16613,12 +16613,12 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20180604190242526" modified="20200330164508497" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
+<div created="20180604190242526" modified="20200405152211771" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
 <pre>[img[pictures/matconim.jpg]]
 
 !!![[אירי]]:
 
-אצל אווה המתכונים כתובים על פתקאות קטנות, תפוסים עם אטב למדף, וכתובות בהם רק הכמויות, ברוב המקרים אפילו לא השם, כי היא לא זוכרת כמויות. אופן ההכנה ברור לה. וזה הקטע עם מתכונים, שלפני שמכינים אותם צריך להתכונן. לקרוא אותם ולהבין מה עושים כמו טקסט עבור שחקן.
+אצל [[אווה]] המתכונים כתובים על פתקאות קטנות, תפוסים עם אטב למדף, וכתובות בהם רק הכמויות, ברוב המקרים אפילו לא השם, כי היא לא זוכרת כמויות. אופן ההכנה ברור לה. וזה הקטע עם מתכונים, שלפני שמכינים אותם צריך להתכונן. לקרוא אותם ולהבין מה עושים כמו טקסט עבור שחקן.
 
 &lt;&lt;list-links filter:&quot;[tag[מתכונים]]&quot;&gt;&gt;
 
