--- a/english.html
+++ b/english.html
@@ -473,7 +473,7 @@ Error message and password prompt
 
 <li>Eva</li>
 
-<li>Eva Coen</li>
+<li>Eva Cohen</li>
 
 <li>Eva narrates 01</li>
 
@@ -484,6 +484,8 @@ Error message and password prompt
 <li>F.M.Alexander</li>
 
 <li>Fa</li>
+
+<li>Fapina</li>
 
 <li>Fargo</li>
 
@@ -498,6 +500,8 @@ Error message and password prompt
 <li>Flip-flopping</li>
 
 <li>Food addicts</li>
+
+<li>From Eyal Shani's kitchen</li>
 
 <li>Gabriel Fauré</li>
 
@@ -9083,7 +9087,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200405151759134" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200407130821749" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9092,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Recipes [[Coen Sisters]]" title="$:/StoryList">
+<div list="Smartphone [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9112,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200405151717630" title="$:/temp/search">
+<div created="20161023184814872" modified="20200407125619778" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10258,7 +10262,7 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 
 </pre>
 </div>
-<div created="20180915085721246" modified="20200323063020784" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20200406161358185" tags="[[Monkeys with car keys]] [[Outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10279,7 +10283,7 @@ It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wo
 
 For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the [[9-side-wishing-star]]:
 
-Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I [[invented|Dreams that we've dreamt]] back then was that I am a basic Hungarian woman, named [[Eva Coen]], and actually as far as I was concerned, I was the sister of [[Ethan and Joel Coen]], the Coen brothers, even though Joel is the name of [[my father|Papa Yoel]] and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with [[Gura]], my beautiful little sister. Gura and I [[have worked|The first assembly]] for many days, developing the agenda and the characters, the concept and the drama. We wrote [[a foundation|HH]] for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built [[the lab|The lab]] in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that [[Saraleh would have liked it]]. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like [[Meir Ariel]] told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have [[liked it|Love]] or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as [[a politician|A politician]], because I'm sure that Saraleh would have not liked it.
+Pretty long time ago, 13-14 years ago, I had this.... phase. I was high all the time, and regardless, I've always liked to invent things. One of the things that I [[invented|Dreams that we've dreamt]] back then was that I am a basic Hungarian woman, named [[Eva Coen|Eva]], and actually as far as I was concerned, I was the sister of [[Ethan and Joel Coen]], the Coen brothers, even though Joel is the name of [[my father|Papa Yoel]] and I don't have any brothers, only four sisters, just like [[Dr Derek Shepherd|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with [[Gura]], my beautiful little sister. Gura and I [[have worked|The first assembly]] for many days, developing the agenda and the characters, the concept and the drama. We wrote [[a foundation|HH]] for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built [[the lab|The lab]] in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that [[Saraleh would have liked it]]. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like [[Meir Ariel]] told in the movie [[THE CAMPAIGN OF MEIR ARIEL|https://www.youtube.com/watch?v=yFXUEoXCkT8]] (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have [[liked it|Love]] or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as [[a politician|A politician]], because I'm sure that Saraleh would have not liked it.
 
 Or like Gura and I wrote back then, when I lived [[between the oaks|The lab]]:
 
@@ -10653,13 +10657,13 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 
  &lt;&lt;heblink [[כתב התנועה אשכול-וכמן]]&gt;&gt;</pre>
 </div>
-<div created="20200202170301933" modified="20200324170146859" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Ethan and Joel Coen">
+<div created="20200202170301933" modified="20200406161542326" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Ethan and Joel Coen">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 
 !!![[Gura]]:
 
-The brothers [[Ethan and Joel Coen|https://en.wikipedia.org/wiki/Coen_brothers]], which [[Yoyo]] adopted in the beginning of the millennium, and turned them into his brothers, and himself into [[Eva Coen]], their sister- who is a Hungarian pastry cook, were the foundation of the sisters.
+The brothers [[Ethan and Joel Coen|https://en.wikipedia.org/wiki/Coen_brothers]], which [[Yoyo]] adopted in the beginning of the millennium, and turned them into his brothers, and himself into [[Eva Coen|Eva]], their sister- who is a Hungarian pastry cook, were the foundation of the sisters.
 He's definitely not the only one who [[loves them|Fargo]] and their [[wonderful mind|The Big Lebowski]]. 
 
 
@@ -10670,13 +10674,32 @@ He's definitely not the only one who [[loves them|Fargo]] and their [[wonderful 
 
 </pre>
 </div>
-<div created="20200202161040118" modified="20200405151713711" tags="Metafiction [[The estate]] [[Coen sister]] Baking [[Menopause sisters]] [[When they sleep]]" title="Eva">
+<div created="20200202161040118" modified="20200406164118561" tags="Metafiction [[The estate]] [[Coen sister]] Baking [[Menopause sisters]] [[When they sleep]]" title="Eva">
 <pre>[img[pictures/eva-veyoyo.jpg]]
+
+''
+Or in her full name, Eva Coen.''
+
+
+!!![[Gura]]: 
+
+It’s funny but when [[Yoyo]] started talking to Eva at [[Puaa’s|Puaa]] place he didn’t notice that her name was Eva Cohen, just like the name of the Hungarian pastry chef that he made himself up to be.
+
+So there were two Eva, one is real and one is made up, which one did you mean?
+
+This is the real Eva, [[Eva Cohen]].
+
+This Eva, is the mother and sister of the Coen sisters, Yoyo my darling and beloved brother who’s ten years older than me, that in his dark days comforted himself with the two [[male brothers directors|Ethan and Joel Coen]]. They gave him enormous pleasure. 
+
+This was in the days after [[Ella|Wishing star 04]], when he started to believe in god. He started thinking about creation and about a group of creatives.
+
+He saw himself as Eva Coen, a plumptious Hungarian pastry chef, not [[fapinalian|Fapina]] god forbid, but sensual and creative, flowing like a gushing spring. 
+
 
 
  &lt;&lt;heblink [[אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200115145347212" modified="20200215151700555" tags="[[Coen sister]] Mothers" title="Eva Coen">
+<div created="20200115145347212" modified="20200406161255200" tags="[[Coen sister]] Mothers" title="Eva Cohen">
 <pre>[img[pictures/eva-coen.jpg]]
 
 !!![[Gura]]:
@@ -10801,6 +10824,19 @@ There aren't enough words or space to describe the wonder of him and of the whol
  &lt;&lt;heblink [[פה]]&gt;&gt;
 </pre>
 </div>
+<div created="20200406162758765" modified="20200406163152903" tags="[[True stories]] [[The archive's trustees]]" title="Fapina">
+<pre>
+
+[img[https://i.imgur.com/xiMpKvk.jpg)]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[פפינה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200220163951863" modified="20200324170245570" tags="TV [[TV Series]] Films [[Hunky Dory]]" title="Fargo">
 <pre>[img[pictures/fargo.jpg]]
 
@@ -10837,7 +10873,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20200405110155923" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]]" title="Films">
+<div created="20200212161010633" modified="20200406163112517" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10882,6 +10918,24 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 &lt;&lt;list-links filter:&quot;[tag[Food addicts]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200406153134488" modified="20200406154428699" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
+<pre>
+[img[pictures/eyal-shani.jpg]]
+
+
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[מהמטבח של אייל שני]]&gt;&gt;
+
+
+
 </pre>
 </div>
 <div created="20200215222131458" modified="20200215222759573" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]]" title="Gabriel Fauré">
@@ -11169,8 +11223,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
 </pre>
 </div>
 <div created="20200405105856295" modified="20200405151733392" tags="[[Here in the Ghetto]] [[Food addicts]] [[Corona beings]] Restaurants" title="HaAchims grocery store">
-<pre>
-[img[pictures/makolet-haachim.jpg]]
+<pre>[img[pictures/makolet-haachim.jpg]]
 
 
 !!![[Tomer]]:
@@ -11673,13 +11726,13 @@ It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used
 
 </pre>
 </div>
-<div created="20200213151742129" modified="20200324170618597" tags="Films [[Outer sisters]] Music [[Hunky Dory]]" title="Jeff Bridges">
+<div created="20200213151742129" modified="20200406161630793" tags="Films [[Outer sisters]] Music [[Hunky Dory]]" title="Jeff Bridges">
 <pre>[img[pictures/jeff-bridges.jpg]]
 
 
 [[Yoyo]]:
 
-On [[Jeff Bridges's site|https://www.jeffbridges.com/]] you can see that he's done many things including many [[movies|https://www.jeffbridges.com/filmography.html]]. [[Eva|Eva Coen]] says that he's the most attractive actor, but [[Genevieve]], who lately became an enthusiastic [[HOUSE|House]] viewer, claims that [[Hugh Laurie|https://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] takes him. [[Gura]] says that he's super handsome and that it was very hard for her to draw his cattish features, and finally she chose a picture from [[THE FABULOS BAKER BOYS|https://www.imdb.com/title/tt0097322/]].
+On [[Jeff Bridges's site|https://www.jeffbridges.com/]] you can see that he's done many things including many [[movies|https://www.jeffbridges.com/filmography.html]]. [[Eva|Eva Cohen]] says that he's the most attractive actor, but [[Genevieve]], who lately became an enthusiastic [[HOUSE|House]] viewer, claims that [[Hugh Laurie|https://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]] takes him. [[Gura]] says that he's super handsome and that it was very hard for her to draw his cattish features, and finally she chose a picture from [[THE FABULOS BAKER BOYS|https://www.imdb.com/title/tt0097322/]].
 
 I say that I love Jeff Bridges, but more than all he's the [[dude|https://www.imdb.com/title/tt0118715/characters/nm0000313?ref_=tt_cl_t1]], even though that during the film's shooting he stopped smoking pot.
 
@@ -11947,7 +12000,7 @@ From bitter searching of the heart, Quickened with passion and with pain We rise
  &lt;&lt;heblink [[לאונרד כהן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215225741395" modified="20200219132954190" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
+<div created="20200215225741395" modified="20200406161654159" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[Genevieve]]:
@@ -11960,7 +12013,7 @@ Well,
 
 It could go pretty wrong, your food- if you don't pay attention to what's suitable and how much of it.
 
-We were guests of [[Eva|Eva Coen]] and [[Philipp]] this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made [[cookies|Lemon cookies]] and a [[pie|Nectarine pie]]. 
+We were guests of [[Eva|Eva Cohen]] and [[Philipp]] this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made [[cookies|Lemon cookies]] and a [[pie|Nectarine pie]]. 
 
 [[The cake|Torte]] itself with the cinnamon and the maple was still tasty and sweet in the right way, but it's true that a long chewing process was involved in eating it, and the nuts took over, but I still ate more of it.
 
@@ -13121,22 +13174,28 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 </pre>
 </div>
-<div created="20200215210007690" modified="20200330170811277" tags="[[Palms of the hands]]" title="Psychodiagnostic Chirology">
+<div created="20200215210007690" modified="20200407125517323" tags="[[Palms of the hands]] [[Outer sisters]]" title="Psychodiagnostic Chirology">
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
+
+
+!!![[Alfred]]:
+
+
+[[A psychological diagnostic technique|https://www.pdc.co.il/ind1.htm]] using hand analysis that was developed by Dr. Arnold Holtzman. 
 
 
  &lt;&lt;heblink [[כירולוגיה פסיכודיאגנוסטית]]&gt;&gt;
 
 </pre>
 </div>
-<div created="20200215140208543" modified="20200215141026096" tags="Restaurants [[Outer sisters]]" title="Puaa">
+<div created="20200215140208543" modified="20200406161710249" tags="Restaurants [[Outer sisters]]" title="Puaa">
 <pre>[img[pictures/pooa.jpg]]
 
 !!![[Yoyo]]:
 
 [[Puah|https://puaa.rol.co.il/]], the woman and the founder, passed away in January 2015.
 The Café-Restaurant that was founded in 1999 continues on working.
-It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.  
+It's where Yoyo spoke with [[Eva|Eva Cohen]] for the first time.  
 
   &lt;&lt;heblink [[פועה]]&gt;&gt;
 
@@ -13567,8 +13626,13 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
  &lt;&lt;heblink [[סלק מבושל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226104956723" modified="20200330170943606" tags="[[Monkeys with car keys]] [[True stories]] Metafiction [[Palms of the hands]] [[Corona beings]]" title="Smartphone">
+<div created="20200226104956723" modified="20200407130818700" tags="[[Monkeys with car keys]] [[True stories]] Metafiction [[Palms of the hands]] [[Corona beings]]" title="Smartphone">
 <pre>[img[pictures/smart-phone.jpg]]
+
+
+!!![[Jong]]:
+
+In an initiated and planned way, up until now [[we didn’t mention here|Coen sister]] in the archive the existence of [[the devices dressed up as phones|https://en.wikipedia.org/wiki/Smartphone]]. Even though we all have one or another. I am sitting and waiting for the Metro this morning, while the smart one is recommending a series of photographs that date exactly one year ago. It thinks they will be suitable for my album, and then my head starts exploding. It was a series of photographs that I was sure that I have already erased - and I did, but not from the inside. In the photographs you can see Nataly, who [[went away from me|https://www.youtube.com/watch?v=1dXEzMcfCyA]] three months ago, and me, In love. 
 
 
 
