--- a/index.html
+++ b/index.html
@@ -983,6 +983,8 @@ Error message and password prompt
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
 
+<li>מהמטבח של אייל שני</li>
+
 <li>מוזיקה</li>
 
 <li>מוכרת הדיסקים/dj</li>
@@ -9079,7 +9081,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;\n &lt;&lt;heblink [[מוזיקה]]&gt;&gt;&quot;,
+            &quot;text&quot;: &quot;https://www.youtube.com/watch?v=1dXEzMcfCyA&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -9200,7 +9202,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200405152009685" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200407125656239" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9209,7 +9211,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מכולת האחים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהמטבח של אייל שני]] [[טלפון חכם]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9229,7 +9231,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200405151858615" title="$:/temp/search">
+<div created="20161023184814872" modified="20200407125743454" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9730,7 +9732,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Odelia]]&gt;&gt;
 </pre>
 </div>
-<div created="20161213185747995" modified="20200405152156518" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[אחות כהן]] [[האחיות בלות]] [[כשהם ישנים]] אפייה" title="אווה">
+<div created="20161213185747995" modified="20200406160634204" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[אחות כהן]] [[האחיות בלות]] [[כשהם ישנים]] אפייה" title="אווה">
 <pre>[img[pictures/eva-veyoyo.jpg]]
 
 ''או בשמה המלא, אווה כהן.''
@@ -9741,9 +9743,9 @@ Sunny one so true, I love you.//
 
 אם כן, יש שתי אווה כהן, אחת אמיתית ואחת בדויה - למי התכוונתם?
 
-זו [[האווה|אווה כהן]] האמיתית, אווה כהן.
+[[זו האווה|אווה כהן]] האמיתית, אווה כהן.
 
-כאן זו [[אווה]], האם והאחות של האחיות כהן, יויו אחי היקר והאהוב שמבוגר ממני בעשר שנים, שבימיו הקשים ניחם עצמו [[בשני אחים זכרים|איתן וג'ואל כהן]] בימאים, שהסבו לו הנאה אדירה. 
+כאן זו אווה, האם והאחות של האחיות כהן, יויו אחי היקר והאהוב שמבוגר ממני בעשר שנים, שבימיו הקשים ניחם עצמו [[בשני אחים זכרים|איתן וג'ואל כהן]] בימאים, שהסבו לו הנאה אדירה. 
 
 זה היה בימים שאחרי [[אלה|כוכב המשאלות 04]], בהם החל להאמין באלוהים. הוא חשב על יצירה ועל קבוצת יצירה.
 
@@ -9754,7 +9756,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Eva]]&gt;&gt;
 </pre>
 </div>
-<div created="20161215192348716" modified="20200220182929678" tags="[[אחות כהן]] אימהות" title="אווה כהן">
+<div created="20161215192348716" modified="20200406161219956" tags="[[אחות כהן]] אימהות" title="אווה כהן">
 <pre>[img[pictures/eva-coen.jpg]]
 
 
@@ -9772,7 +9774,7 @@ Sunny one so true, I love you.//
 
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על [[חייה עם איריס|כשהם ישנים]], ביתה של אווה ואווה.
 
-&lt;&lt;englink [[Eva Coen]]&gt;&gt;</pre>
+&lt;&lt;englink [[Eva Cohen]]&gt;&gt;</pre>
 </div>
 <div created="20170722121850671" modified="20200322163006130" tags="[[הסיפור על גורה]]" title="אווה מספרת  01">
 <pre>[img[pictures/hasipoor-1.jpg]]
@@ -14787,10 +14789,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[They cut down trees]]&gt;&gt;
 </pre>
 </div>
-<div created="20161115215130799" modified="20200330164030538" tags="[[כפות ידיים]]" title="כירולוגיה פסיכודיאגנוסטית">
+<div created="20161115215130799" modified="20200407125707855" tags="[[כפות ידיים]] [[אחיות חוץ]]" title="כירולוגיה פסיכודיאגנוסטית">
 <pre>[img[pictures/yZiEyakkL0F87eQO.JPG]]
 
-שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].
+
+!!![[אלפרד]]:
+
+[[שיטת אבחון פסיכולוגי|https://www.pdc.co.il/ind1.htm]] על ידי ניתוח כף היד, שפותחה על ידי ד&quot;ר ארנולד הולצמן.
 
 &lt;&lt;englink [[Psychodiagnostic Chirology]]&gt;&gt;</pre>
 </div>
@@ -15971,6 +15976,22 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
+<div created="20200406152807676" modified="20200407140650035" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
+<pre>
+[img[pictures/eyal-shani.jpg]]
+
+!!![[תומר]]:
+
+עיתות קורונה הביאו עימן סדר יום חדש למדורת השבט, כמו התכנית בה אחד השפים מבשל מהמטבח הביתי שלו.
+
+המטבח של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] נמצא ממש [[כאן בגטו]], והוא מלא קסם וחלון עם עץ. הוא מסתובב במטבח בשידור חי, סביבו צלם שמצלם בעין אוהבת, אייל זז הצידה או מחכה כשהצלם עומד בדרכו כי הוא צריך לצלם רגע את מה שרוחש על הגז. &quot;הקורונה השכיחה אויבים אחרים&quot; הוא חושב תוך כדי שטיפת ירקות ועורכת שמדברת אליו מתוך האוזנייה. כשרוצים לתאר את אייל שני עולות מילים אחרות ותמונות גדולות, כי אייל הוא דמות כזאת, שבאותה הדרמטיות והרצינות, בוחשת תערובת שוקולד או מדברת על התרד שנמס לתוך עצמו או מסבירה את תהליכי הבישול ואופיים של חומרי גלם בחוכמה ובנדיבות.
+
+
+&lt;&lt;englink [[From Eyal Shani's kitchen]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20180205175902513" modified="20200212204951293" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
 
@@ -16180,8 +16201,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20200405102558367" modified="20200405122503259" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
-<pre>
-[img[pictures/makolet-haachim.jpg]]
+<pre>[img[pictures/makolet-haachim.jpg]]
 
 
 !!![[תומר]]:
@@ -16613,7 +16633,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20180604190242526" modified="20200405152211771" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
+<div created="20180604190242526" modified="20200406162909899" tags="[[חיות אוכל]] [[מטא בדיון]] הצוות [[אירי טוענת]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[כפות ידיים]]" title="מתכונים">
 <pre>[img[pictures/matconim.jpg]]
 
 !!![[אירי]]:
@@ -18551,16 +18571,21 @@ __אופן ההכנה____
 &lt;&lt;englink [[Once]]&gt;&gt;
 </pre>
 </div>
-<div created="20170125155935412" modified="20170125170002675" title="פפינה">
+<div created="20170125155935412" modified="20200406163036694" tags="[[סיפורים אמיתיים]]" title="פפינה">
 <pre>!!![[יויו]]:
 ''
 Fapina''
 
 
-''מילה בהונגרית שמשמעותה:''
+''מילה בהונגרית שפעם לימדו אותי ושמשמעותה:''
 
 
 [img[https://i.imgur.com/xiMpKvk.jpg)]]
+
+
+
+
+&lt;&lt;englink [[Fapina]]&gt;&gt;
 
 
 </pre>
