--- a/index.html
+++ b/index.html
@@ -9231,7 +9231,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200407125743454" title="$:/temp/search">
+<div created="20161023184814872" modified="20200407150507080" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13347,7 +13347,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180814103316187" modified="20200212201446463" tags="סרטים" title="חבר">
+<div created="20180814103316187" modified="20200407151327935" tags="סרטים" title="חבר">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -15976,15 +15976,15 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
-<div created="20200406152807676" modified="20200407140650035" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
+<div created="20200406152807676" modified="20200407204143224" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
 <pre>
 [img[pictures/eyal-shani.jpg]]
 
 !!![[תומר]]:
 
-עיתות קורונה הביאו עימן סדר יום חדש למדורת השבט, כמו התכנית בה אחד השפים מבשל מהמטבח הביתי שלו.
+עיתות קורונה הביאו עימן סדר יום חדש למדורת השבט, כמו התכנית בה בכל יום שף אחר מבשל מהמטבח הביתי שלו.
 
-המטבח של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] נמצא ממש [[כאן בגטו]], והוא מלא קסם וחלון עם עץ. הוא מסתובב במטבח בשידור חי, סביבו צלם שמצלם בעין אוהבת, אייל זז הצידה או מחכה כשהצלם עומד בדרכו כי הוא צריך לצלם רגע את מה שרוחש על הגז. &quot;הקורונה השכיחה אויבים אחרים&quot; הוא חושב תוך כדי שטיפת ירקות ועורכת שמדברת אליו מתוך האוזנייה. כשרוצים לתאר את אייל שני עולות מילים אחרות ותמונות גדולות, כי אייל הוא דמות כזאת, שבאותה הדרמטיות והרצינות, בוחשת תערובת שוקולד או מדברת על התרד שנמס לתוך עצמו או מסבירה את תהליכי הבישול ואופיים של חומרי גלם בחוכמה ובנדיבות.
+המטבח של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] נמצא ממש [[כאן בגטו]], והוא מלא קסם וחלון עם עץ. הוא מסתובב במטבח בשידור חי, סביבו צלם שמצלם בעין אוהבת, אייל זז הצידה או מחכה כשהצלם עומד בדרכו כי הוא צריך לצלם רגע את מה שרוחש על הכיריים. &quot;הקורונה השכיחה אויבים אחרים&quot;, הוא חושב בקול רם תוך כדי שטיפת ירקות ועורכת שמדברת אליו מתוך האוזנייה. כשרוצים לתאר את אייל שני עולות מילים אלגנטיות ותמונות גדולות, כי אייל הוא דמות כזאת, שבאותה הדרמטיות והרצינות, בוחשת תערובת שוקולד או מדברת על התרד שנמס לתוך עצמו או מסבירה את תהליכי הבישול ואופיים של חומרי גלם בחוכמה ובנדיבות.
 
 
 &lt;&lt;englink [[From Eyal Shani's kitchen]]&gt;&gt;
