--- a/index.html
+++ b/index.html
@@ -9202,7 +9202,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200407125656239" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200408103639546" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9211,7 +9211,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מהמטבח של אייל שני]] [[טלפון חכם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15976,7 +15976,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
-<div created="20200406152807676" modified="20200407204143224" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
+<div created="20200406152807676" modified="20200408103641432" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
 <pre>
 [img[pictures/eyal-shani.jpg]]
 
@@ -15984,7 +15984,7 @@ We rise to play a greater part.
 
 עיתות קורונה הביאו עימן סדר יום חדש למדורת השבט, כמו התכנית בה בכל יום שף אחר מבשל מהמטבח הביתי שלו.
 
-המטבח של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] נמצא ממש [[כאן בגטו]], והוא מלא קסם וחלון עם עץ. הוא מסתובב במטבח בשידור חי, סביבו צלם שמצלם בעין אוהבת, אייל זז הצידה או מחכה כשהצלם עומד בדרכו כי הוא צריך לצלם רגע את מה שרוחש על הכיריים. &quot;הקורונה השכיחה אויבים אחרים&quot;, הוא חושב בקול רם תוך כדי שטיפת ירקות ועורכת שמדברת אליו מתוך האוזנייה. כשרוצים לתאר את אייל שני עולות מילים אלגנטיות ותמונות גדולות, כי אייל הוא דמות כזאת, שבאותה הדרמטיות והרצינות, בוחשת תערובת שוקולד או מדברת על התרד שנמס לתוך עצמו או מסבירה את תהליכי הבישול ואופיים של חומרי גלם בחוכמה ובנדיבות.
+המטבח של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] נמצא ממש [[כאן בגטו]], והוא מלא קסם וחלון עם עץ. הוא מסתובב במטבח בשידור חי, סביבו צלם שמצלם בעין אוהבת, אייל זז הצידה או מחכה כשהצלם עומד בדרכו כי הוא צריך לצלם רגע את מה שרוחש על הכיריים. &quot;הקורונה השכיחה אויבים אחרים&quot;, הוא חושב בקול רם תוך כדי שטיפת ירקות ועורכת שמדברת אליו מתוך האוזנייה. כשרוצים לתאר את אייל שני עולות מילים אלגנטיות ותמונות גדולות, כי אייל הוא דמות כזאת, שבאותה הדרמטיות והרצינות, [[בוחשת תערובת שוקולד|כפות ידיים]] או מדברת על התרד שנמס לתוך עצמו או מסבירה את תהליכי הבישול ואופיים של חומרי גלם בחוכמה ובנדיבות.
 
 
 &lt;&lt;englink [[From Eyal Shani's kitchen]]&gt;&gt;
