--- a/index.html
+++ b/index.html
@@ -9211,7 +9211,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מכולת האחים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16200,13 +16200,13 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200405102558367" modified="20200405122503259" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
+<div created="20200405102558367" modified="20200408125314455" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
 <pre>[img[pictures/makolet-haachim.jpg]]
 
 
 !!![[תומר]]:
 
-במשך כמה ימים חייגתי בעקשנות [[לאחים|האחים]]. נורא רציתי חומוס, ושוב ושוב המספר היה לא מחובר. המשכתי להתעקש כמה ימים עד שקרה וההודעה המוקלטת ענתה, והקשתי 1, וקיבלתי [[קישור למכולת המלהיבה|https://www.tabitorder.com/?site=5adc4303e98e0717008ce965#/start]],
+במשך כמה ימים חייגתי בעקשנות [[לאחים|האחים]]. נורא רציתי חומוס, ושוב ושוב המספר היה לא מחובר. המשכתי להתעקש כמה ימים נוספים עד שקרה וההודעה המוקלטת ענתה, והקשתי 1, וקיבלתי [[קישור למכולת המלהיבה|https://www.tabitorder.com/?site=5adc4303e98e0717008ce965#/start]],
  שהיא הברקה קורוניאליות ביג, אני מאושר.
 
 
