--- a/english.html
+++ b/english.html
@@ -8962,7 +8962,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;&lt;&lt;englink [[Love]]&gt;&gt;&quot;,
+            &quot;text&quot;: &quot;Palms of the hands&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -9087,7 +9087,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200407130821749" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200409092645424" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9096,7 +9096,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Smartphone [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The baristas here]] [[From Eyal Shani's kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9116,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200407125619778" title="$:/temp/search">
+<div created="20161023184814872" modified="20200409090638341" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10826,7 +10826,6 @@ There aren't enough words or space to describe the wonder of him and of the whol
 </div>
 <div created="20200406162758765" modified="20200406163152903" tags="[[True stories]] [[The archive's trustees]]" title="Fapina">
 <pre>
-
 [img[https://i.imgur.com/xiMpKvk.jpg)]]
 
 
@@ -10920,12 +10919,16 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200406153134488" modified="20200406154428699" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
-<pre>
-[img[pictures/eyal-shani.jpg]]
+<div created="20200406153134488" modified="20200409090723268" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
+<pre>[img[pictures/eyal-shani.jpg]]
 
 
 
+!!![[Tomer]]:
+
+The corona times have brought about a new routine to the tribal campfire, such as the TV show in which every day a different chef cooks from his own kitchen. 
+
+[[Eyal Shani’s|https://en.wikipedia.org/wiki/Eyal_Shani]] kitchen is right [[here in the ghetto|Here in the Ghetto]], it has charm and a window with a tree. In live broadcast he is walking around the kitchen while a photographer with a kind and loving eye captures him. Eyal moves to the side or waits when the photographer is standing in his way because he just has to film whatever is bubbling on the stove. “The corona has made us forget other enemies.” He is thinking aloud while he washes vegetables and the editor is speaking to him through an earpiece. When you come to describe Eyal Shani you come up with elegant words and big pictures, because Eyal is such a character that in the same seriousness and drama, a chocolate cake is [[being mixed|Palms of the hands]], spinach is talked about as being melted on to its own self or the cooking and baking processes of various materials are being explained wisely and generously. 
 
 
 
@@ -13927,9 +13930,16 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[מספרה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226072300277" modified="20200226072654606" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
+<div created="20200226072300277" modified="20200409094843940" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The baristas here">
 <pre>[img[pictures/barista.jpg]]
 
+
+!!![[Tomer]]:
+
+Here, in the bubble-like ghetto, the one who’s name resounds for his hallucinatory do-gooder citizens who sit in cafes and jabber about day and night their decadent left-wing chatter, Novelty oblige - and many great [[Baristas|https://en.wikipedia.org/wiki/Barista]], In their most seriousness which is apparent by their concentrated gaze when they mix and pour the milk, by their bodily posture and by the stillness of their labour, make our coffees 
+
+
+(Photographed in [[Lehamim]])
 
 
  &lt;&lt;heblink [[הבריסטות שכאן]]&gt;&gt;</pre>
